--- a/trials.ipynb
+++ b/trials.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"0f3817ab-d525-477b-8af1-2b93c4bdd1b9\"\n",
-    "PINECONE_API_ENV = \"gcp-starter\""
+    "PINECONE_API_KEY = \"",
+    "PINECONE_API_ENV = \"\""
    ]
   },
   {
